<resources>
    <string name="app_name">Self_Introduction</string>
    <string name="logo">ELEMENTAL</string>
    <string name="signIn_id">ID</string>
    <string name="signIn_id_et">INPUT YOUR ID</string>
    <string name="signIn_pw">PW</string>
    <string name="signIn_pw_et">INPUT YOUR PW</string>
    <string name="signIn_login">SIGN IN</string>
    <string name="signIn_signup">SIGN UP</string>
    <string name="toast_msg_noinput">입력되지 않은 정보가 있습니다.</string>
    <string name="toast_msg_idpqErr">ID/PW를 확인해주세요.</string>
    <string name="signup_name">NAME</string>
    <string name="signup_name_et">INPUT YOUR NAME</string>
    <string name="cancle">CANCLE</string>
</resources>